--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
