--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet" />
-    <title>React App</title>
+    <title>Matthew Duffy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
